--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@angular/router": "^13.2.0",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.4",
+    "ng2-search-filter": "0.4.7",
+    "@fortawesome/fontawesome": "1.1.3",
+    "bootstrap": "3.3.7"
   },
   "scripts": {
     "ng": "ng",
